# nexus-forge-ide

./: CMakeLists.txt  Cargo.toml  Package.swift  README.md  build.gradle  main.cpp
ai/features/: ai_autocomplete.hpp  ai_chat.cpp  ai_chat.hpp
ai/models/: model_manager.cpp  model_manager.hpp
ai/providers/: anthropic_provider.hpp  local_llm_provider.hpp  openai_provider.hpp
config/: keybinding_manager.hpp  settings_manager.hpp  snippet_manager.hpp  user_data.hpp
core/asm/: crypto_accel.asm  memory_ops.asm  simd_operations.asm
core/engine/: event_system.cpp  event_system.hpp  memory_manager.cpp  memory_manager.hpp  nexus_core.cpp  nexus_core.hpp  plugin_loader.cpp  plugin_loader.hpp  thread_pool.cpp  thread_pool.hpp
core/jni/: NexusJNIBridge.java  nexus_jni.cpp
core/platform/: platform_abstraction.cpp  platform_abstraction.hpp  platform_android.cpp  platform_ios.cpp  platform_linux.cpp  platform_macos.cpp  platform_web.cpp  platform_windows.cpp
debugger/: breakpoint_manager.hpp  debug_adapter_protocol.hpp  variable_inspector.hpp
editor/buffer/: gap_buffer.hpp  piece_table.hpp  rope_buffer.hpp  text_buffer.hpp  undo_manager.hpp
editor/features/: bracket_matching.hpp  code_folding.hpp  git_integration.hpp  multi_cursor.hpp  search_replace.hpp
editor/intellisense/: completion_provider.hpp  lsp_client.hpp
editor/syntax/: syntax_highlighter.hpp  tree_sitter_bridge.hpp
extensions/api/: extension_api.hpp  extension_host.cpp  ipc_channel.hpp  sandbox.hpp
extensions/marketplace/: extension_installer.hpp  marketplace_client.cpp
networking/: http_client.hpp  live_share.hpp  remote_dev.hpp  websocket_client.hpp
terminal/: pty_handler.hpp  shell_integration.hpp  terminal_emulator.hpp
ui/framework/: animation_engine.hpp  layout_engine.hpp  theme_manager.hpp  widget_system.cpp  widget_system.hpp
ui/mobile/: adaptive_layout.hpp  gesture_recognizer.hpp
ui/renderer/: directx_backend.hpp  font_renderer.hpp  metal_backend.hpp  opengl_backend.hpp  render_engine.cpp  render_engine.hpp  shader_manager.hpp  texture_manager.hpp  vulkan_backend.hpp
ui/screens/: main_window.cpp  main_window.hpp  splash_screen.cpp  splash_screen.hpp
ui/widgets/: button.hpp  code_editor.cpp  code_editor.hpp  command_palette.hpp  minimap.hpp  status_bar.hpp  tab_bar.hpp  text_input.hpp  tree_view.hpp
workspace/: file_watcher.hpp  project_system.hpp  search_engine.hpp  workspace_manager.hpp
